# pipeline-airflow

./: .env  .gitignore  Dockerfile  README.md  docker-compose-portainer.yml  docker-compose.yml  pyproject.toml  stack.env
dags/: custom_operators.py  pipelilne_loader.py
dags/pipelines/: pipeline.yaml  schema.json
dags/pipelines/steps/CSVCollectorOperator/: CSVCollectorOperator.py  __init__.py
dags/pipelines/steps/CSVIteratorOperator/: CSVIteratorOperator.py  __init__.py
dags/pipelines/steps/CSVToTTLOperator/: CSVToTTLOperator.py  __init__.py  csv2ttl.py
dags/pipelines/steps/ConvertTtlToJsonldOperator/: ConvertTtlToJsonldOperator.py  __init__.py
dags/pipelines/steps/EmitTTLOperator/: EmitTTLOperator.py  __init__.py
dags/pipelines/steps/FetchAPIWithPage/: FetchAPIWithPage.py  config.py
dags/pipelines/steps/FetchAPIWithPageOperator/: FetchAPIWithPageOperator.py  __init__.py  config.py
dags/pipelines/steps/JSONToCSVOperator/: JSONToCSVOperator.py  __init__.py
dags/pipelines/steps/PrintOperator/: PrintOperator.py  __init__.py
dags/pipelines/steps/RunSparqlComunicaOperator/: RunSparqlComunicaOperator.py  __init__.py
dags/pipelines/steps/SaveFileTTLOperator/: SaveFileTTLOperator.py  __init__.py
dags/pipelines/steps/SplitGraphOperator/: SplitGraphOperator.py  __init__.py
dags/pipelines/steps/TTLMergerOperator/: TTLMergerOperator.py  __init__.py
dags/pipelines/steps/XSLTTransformationOperator/: XSLTTransformationOperator.py  __init__.py
dags/pipelines/steps/fetch_api/: fetch_api.py
dags/pipelines/steps/utils/: __init__.py  utils.py
